--- a/Simulations/README
+++ b/Simulations/README
@@ -1,1 +1,1 @@
-This folder contains many CST simulation files where all the conditions explained in [this document](../Defense_Presentation.pdf).
+This folder contains many CST simulation files where all the conditions explained in [this document](../Tomás Ruiz Aybar_MPE_CMJ.pdf).
